removing off-screen image to try and fix memory leak.

--- a/css/app.css
+++ b/css/app.css
@@ -3071,13 +3071,15 @@ button {
   float: left;
   width: 100%;
   position: relative;
+  overflow: auto;
 }
-/* line 577, sass/_modules.scss */
+/* line 578, sass/_modules.scss */
 .swipe-wrap > div .inner-wrap {
   max-width: 80%;
   margin: 50px auto 0;
+  overflow: auto;
 }
-/* line 582, sass/_modules.scss */
+/* line 584, sass/_modules.scss */
 .swipe-wrap > div img {
   display: block;
   margin: 0 auto;
